--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
   "require": {
     "php": "^7.1.0",
     "league/uri": "^5.2",
-    "ramsey/uuid": "^3.7"
+    "ramsey/uuid": "^3.7",
+    "php-http/client-implementation": "^1.0"
   },
   "require-dev": {
     "phpmd/phpmd": "^2.6",
     "phpunit/phpunit": "^7.0",
     "squizlabs/php_codesniffer": "^3.1",
-    "pdepend/pdepend" : "^2.5"
+    "pdepend/pdepend" : "^2.5",
+    "php-http/mock-client": "^1.0"
   },
   "config": {
     "preferred-install": {
