--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,17 @@
   "require": {
     "php": "^7.1.0",
     "league/uri": "^5.2",
+    "php-http/client-implementation": "^1.0",
     "ramsey/uuid": "^3.7",
-    "php-http/client-implementation": "^1.0"
+    "symfony/stopwatch": "^4.0"
   },
   "require-dev": {
+    "pdepend/pdepend": "^2.5",
+    "php-http/mock-client": "^1.0",
     "phpmd/phpmd": "^2.6",
     "phpunit/phpunit": "^7.0",
     "squizlabs/php_codesniffer": "^3.1",
-    "pdepend/pdepend" : "^2.5",
-    "php-http/mock-client": "^1.0"
+    "zendframework/zend-diactoros": "^1.7"
   },
   "config": {
     "preferred-install": {
