preparing environment for route annotations and local server

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-#composer
-/vendor
+###> symfony/framework-bundle ###
+.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
 
-# PHPUnit
+
+###> symfony/phpunit-bridge ###
+.phpunit
 /phpunit.xml
+###< symfony/phpunit-bridge ###
+
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
