--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,18 @@
     }
   ],
   "require": {
-    "php": "^7.1.0",
+    "php": "^7.1.3",
+    "ext-iconv": "*",
     "league/uri": "^5.2",
     "php-http/client-implementation": "^1.0",
     "ramsey/uuid": "^3.7",
-    "symfony/stopwatch": "^4.0"
+    "sensio/framework-extra-bundle": "^5.1",
+    "symfony/console": "^4.0",
+    "symfony/flex": "^1.0",
+    "symfony/framework-bundle": "^4.0",
+    "symfony/lts": "^4@dev",
+    "symfony/stopwatch": "^4.0",
+    "symfony/yaml": "^4.0"
   },
   "require-dev": {
     "pdepend/pdepend": "^2.5",
@@ -24,6 +31,10 @@
     "phpmd/phpmd": "^2.6",
     "phpunit/phpunit": "^7.0",
     "squizlabs/php_codesniffer": "^3.1",
+    "symfony/browser-kit": "^4.0",
+    "symfony/dotenv": "^4.0",
+    "symfony/phpunit-bridge": "^4.0",
+    "symfony/web-server-bundle": "^4.0",
     "zendframework/zend-diactoros": "^1.7"
   },
   "config": {
@@ -35,12 +46,41 @@
   },
   "autoload": {
     "psr-4": {
-      "ServerStatus\\": "src/"
+      "ServerStatus\\": "src/ServerStatus/",
+      "App\\": "src/App/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "ServerStatus\\Tests\\": "tests/"
+      "ServerStatus\\Tests\\": "tests/ServerStatus/",
+      "App\\Tests\\": "tests/App/"
+    }
+  },
+  "replace": {
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "id": "01C713FXYDZC1NFC6C1D9JGKGD",
+      "allow-contrib": false
     }
   }
 }
