--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "symfony/flex": "^1.0",
     "symfony/framework-bundle": "^4.0",
     "symfony/lts": "^4@dev",
+    "symfony/orm-pack": "^1.0",
     "symfony/stopwatch": "^4.0",
     "symfony/yaml": "^4.0"
   },
