--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,6 +19,7 @@ doctrine:
             datetime:     ServerStatus\Infrastructure\Persistence\Doctrine\DBAL\Types\UTCDateTimeType
             datetimetz:   ServerStatus\Infrastructure\Persistence\Doctrine\DBAL\Types\UTCDateTimeType
             CustomerId:   ServerStatus\Infrastructure\Domain\Model\Customer\DoctrineCustomerId
+            CheckId:      ServerStatus\Infrastructure\Domain\Model\Check\DoctrineCheckId
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
