--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "symfony/yaml": "^4.0"
   },
   "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
     "pdepend/pdepend": "^2.5",
     "php-http/mock-client": "^1.0",
     "phpmd/phpmd": "^2.6",
