--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
     "ext-iconv": "*",
     "league/uri": "^5.2",
     "php-http/client-implementation": "^1.0",
+    "php-http/guzzle6-adapter": "^1.1",
     "ramsey/uuid": "^3.7",
     "sensio/framework-extra-bundle": "^5.1",
     "symfony/console": "^4.0",
     "symfony/flex": "^1.0",
     "symfony/framework-bundle": "^4.0",
     "symfony/lts": "^4@dev",
+    "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "^1.0",
     "symfony/stopwatch": "^4.0",
     "symfony/yaml": "^4.0"
