--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "php-http/guzzle6-adapter": "^1.1",
     "ramsey/uuid": "^3.7",
     "sensio/framework-extra-bundle": "^5.1",
+    "symfony/asset": "^4.0",
     "symfony/console": "^4.0",
     "symfony/flex": "^1.0",
     "symfony/framework-bundle": "^4.0",
@@ -26,6 +27,7 @@
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "^1.0",
     "symfony/stopwatch": "^4.0",
+    "symfony/twig-bundle": "^4.0",
     "symfony/yaml": "^4.0"
   },
   "require-dev": {
@@ -37,6 +39,7 @@
     "symfony/browser-kit": "^4.0",
     "symfony/dotenv": "^4.0",
     "symfony/phpunit-bridge": "^4.0",
+    "symfony/profiler-pack": "^1.0",
     "symfony/web-server-bundle": "^4.0",
     "zendframework/zend-diactoros": "^1.7"
   },
