--- a/config/services.yaml
+++ b/config/services.yaml
@@ -55,3 +55,5 @@ services:
         public: false
     ServerStatus\Infrastructure\Ui\Console\Command\CustomerChecksCommand:
         public: false
+    ServerStatus\Infrastructure\Ui\Console\Command\CustomerCheckCommand:
+        public: false
