--- a/src/ServerStatus/Infrastructure/Persistence/Doctrine/Mapping/Domain.Model.Check.Check.orm.yml
+++ b/src/ServerStatus/Infrastructure/Persistence/Doctrine/Mapping/Domain.Model.Check.Check.orm.yml
@@ -13,6 +13,9 @@ ServerStatus\Domain\Model\Check\Check:
         url:
             class: ServerStatus\Domain\Model\Check\CheckUrl
             columnPrefix: "url_"
+        status:
+            class: ServerStatus\Domain\Model\Check\CheckStatus
+            columnPrefix: "status_"
 
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity:
