--- a/config/services.yaml
+++ b/config/services.yaml
@@ -53,6 +53,8 @@ services:
     # data transformers
     ServerStatus\Application\DataTransformer\Measurement\MeasurementSummaryDataTransformer:
         class: ServerStatus\Application\DataTransformer\Measurement\MeasurementSummaryDtoDataTransformer
+    ServerStatus\Application\DataTransformer\Measurement\PerformanceReportsByCustomerDataTransformer:
+        class: ServerStatus\Application\DataTransformer\Measurement\PerformanceReportsByCustomerDtoDataTransformer
     ServerStatus\Application\DataTransformer\Customer\CustomerChecksDataTransformer:
         class: ServerStatus\Application\DataTransformer\Customer\CustomerChecksDtoDataTransformer
     ServerStatus\Application\DataTransformer\Check\CheckDataTransformer:
@@ -60,6 +62,8 @@ services:
 
     # application services
     ServerStatus\Application\Service\Check\ViewCheckByCustomerService:
+        public: false
+    ServerStatus\Application\Service\Check\ViewPerformanceReportsService:
         public: false
 
     # console commands:
