--- a/src/ServerStatus/Infrastructure/Persistence/Doctrine/Mapping/Domain.Model.Check.Check.orm.yml
+++ b/src/ServerStatus/Infrastructure/Persistence/Doctrine/Mapping/Domain.Model.Check.Check.orm.yml
@@ -41,3 +41,14 @@ ServerStatus\Domain\Model\Check\Check:
                 referencedColumnName: id
                 nullable: false
                 type: MeasurementId
+        alerts: # one check has many alerts
+            #orderBy: { 'dates.start': 'DESC' }
+            orphanRemoval: true
+            mappedBy: check
+            cascade: ["all"]
+            targetEntity: ServerStatus\Domain\Model\Alert\Alert
+            joinColumn:
+                name: alert_id
+                referencedColumnName: id
+                nullable: false
+                type: AlertId
