--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,12 +16,13 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
 
         types:
-            datetime:       ServerStatus\Infrastructure\Persistence\Doctrine\DBAL\Types\UTCDateTimeType
-            datetimetz:     ServerStatus\Infrastructure\Persistence\Doctrine\DBAL\Types\UTCDateTimeType
-            CustomerId:     ServerStatus\Infrastructure\Domain\Model\Customer\DoctrineCustomerId
-            CheckId:        ServerStatus\Infrastructure\Domain\Model\Check\DoctrineCheckId
-            MeasurementId:  ServerStatus\Infrastructure\Domain\Model\Measurement\DoctrineMeasurementId
-            AlertId:        ServerStatus\Infrastructure\Domain\Model\Alert\DoctrineAlertId
+            datetime:             ServerStatus\Infrastructure\Persistence\Doctrine\DBAL\Types\UTCDateTimeType
+            datetimetz:           ServerStatus\Infrastructure\Persistence\Doctrine\DBAL\Types\UTCDateTimeType
+            CustomerId:           ServerStatus\Infrastructure\Domain\Model\Customer\DoctrineCustomerId
+            CheckId:              ServerStatus\Infrastructure\Domain\Model\Check\DoctrineCheckId
+            MeasurementId:        ServerStatus\Infrastructure\Domain\Model\Measurement\DoctrineMeasurementId
+            AlertId:              ServerStatus\Infrastructure\Domain\Model\Alert\DoctrineAlertId
+            AlertNotificationId:  ServerStatus\Infrastructure\Domain\Model\AlertNotification\DoctrineAlertNotificationId
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
