--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
     "symfony/lts": "^4@dev",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "^1.0",
+    "symfony/security-bundle": "^4.0",
     "symfony/stopwatch": "^4.0",
+    "symfony/translation": "^4.0",
     "symfony/twig-bundle": "^4.0",
     "symfony/yaml": "^4.0"
   },
