--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "phpmd/phpmd": "^2.6",
     "squizlabs/php_codesniffer": "^3.1",
     "symfony/browser-kit": "^4.0",
+    "symfony/css-selector": "^4.0",
     "symfony/dotenv": "^4.0",
     "symfony/phpunit-bridge": "^4.0",
     "symfony/profiler-pack": "^1.0",
