--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,3 +34,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/account, roles: ROLE_CUSTOMER }
