--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "symfony/stopwatch": "^4.0",
     "symfony/translation": "^4.0",
     "symfony/twig-bundle": "^4.0",
-    "symfony/yaml": "^4.0"
+    "symfony/yaml": "^4.0",
+    "twig/extensions": "^1.5"
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.0",
