--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,6 +26,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags: ['twig.extension']
 
     # repositories:
     ServerStatus\Domain\Model\Check\CheckRepository:
