--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "symfony/stopwatch": "^4.0",
     "symfony/translation": "^4.0",
     "symfony/twig-bundle": "^4.0",
+    "symfony/webpack-encore-pack": "^1.0",
     "symfony/yaml": "^4.0",
     "twig/extensions": "^1.5"
   },
