--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1"
+    "sass-loader": "^7.0.1",
+    "bootstrap": "^4.0.0"
+  },
+  "dependencies": {
+    "popper.js": "^1.14.0"
   }
 }
