--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "bootstrap": "^4.0.0"
+    "sass-loader": "^7.0.1"
   },
   "dependencies": {
     "popper.js": "^1.14.0"
