refactoring styles and tests

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,7 +3,7 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     globals:
-        custom_app_name: "Server Status"
+        custom_app_name: "%app_name%"
         author_name: '%author_name%'
         author_username: '%author_username%'
         author_webpage: '%author_webpage%'
