--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    app_name: 'aktibo'
     author_name: 'Rober MH'
     author_username: 'rmhdev'
     author_webpage: 'http://rmhdev.net'
