--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,6 +4,7 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         custom_app_name: "%app_name%"
+        custom_app_repository: "%app_repository%"
         author_name: '%author_name%'
         author_username: '%author_username%'
         author_webpage: '%author_webpage%'
